# offgrid-llm

./: .dockerignore  .gitattributes  .gitignore  .golangci.yml  CHANGELOG.md  CLEANUP_SUMMARY.md  CONTRIBUTING.md  DESKTOP_INSTALL.md  Dockerfile  GO_VERSION_FIX.md  INSTALLATION_STRATEGY.md  INSTALLATION_UNIFICATION.md  INSTALLER_UPDATE.md  LICENSE  Makefile  NEXT_STEPS.md  PROJECT_STATUS.md  QUICK_INSTALL_LLAMA_SERVER_FIX.md  README.md  RELEASE_STATUS.md  build-all.sh  check-build.sh  delete-releases.sh  docker-compose.yml  go.mod  go.sum  install-desktop.sh  install.sh  json_demo.sh  monitor-build.sh  reinstall.sh  session_demo.sh  start-server.sh  start.sh  test-gpu.sh  test-installer.sh
.github/: PULL_REQUEST_TEMPLATE.md
desktop/: CONTRIBUTING.md  DESKTOP_INSTALL.md  QUICKSTART.md  README.md  build.bat  build.sh  create_icon.py  index.html  loading.html  main.js  package-lock.json  package.json  package.old.json  preload.js  sw.js
dev/: CODE_STYLE.md  CONTRIBUTING.md  INSTALLER_UPDATE.md  Makefile  README.md  docker-compose.yml  install.sh
docker/: DOCKER_README.md  Dockerfile  Dockerfile.gpu  README.md  docker-build.sh  docker-compose.gpu.yml  docker-compose.prod.yml  docker-compose.yml  nginx.conf.example  validate-docker.sh
docs/: 4GB_RAM.md  AESTHETIC_SYNC.md  API.md  AUTO_START.md  BENCHMARK_COMPARE.md  BUILDING.md  CLARITY_IMPROVEMENTS.md  CLI_IMPROVEMENTS.md  CLI_REFERENCE.md  CORE_IMPROVEMENTS.md  CPU_COMPATIBILITY.md  CPU_OPTIMIZATION.md  DEPLOYMENT.md  DESIGN_SYSTEM.md  DISTRIBUTION_STRATEGY.md  DOCKER.md  EMBEDDINGS_GUIDE.md  FEATURES_GUIDE.md  HUGGINGFACE_INTEGRATION.md  IMPLEMENTATION_SUMMARY.md  INFERENCE_TODO.md  INSTALLATION.md  INSTALLATION_IMPROVEMENTS.md  QUICKSTART.md  (+11 more)
python/: README.md  audio_service.py  pyproject.toml
python/examples/: basic_chat.py  knowledge_base.py  model_management.py  performance.py
python/offgrid/: __init__.py  agent.py  audio.py  client.py  kb.py  loading.py  lora.py  models.py  p2p.py
python/offgrid.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
python/offgrid_llm/: __init__.py  client.py  kb.py  models.py
python/offgrid_llm.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
python/tests/: test_client.py  test_live.py
(+270 files in other folders)
